Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             position: relative; margin-bottom: 10px;
             box-shadow: 0 0 40px rgba(0,0,0,0.5);
             border-radius: 12px;
+            background: #000; /* Ensure black bg so neon pops */
         }
         
         .hud-area {
@@ -56,7 +57,6 @@
                 width: 75vh; height: 75vh; /* Scale with height */
                 max-width: 800px; max-height: 800px;
                 border: 3px solid #222;
-                background: #000;
             }
             
             .hud-area {
@@ -180,7 +180,7 @@
     </div>
 
 <script>
-/** NEON STRATEGY CRYSTAL ENGINE **/
+/** NEON STRATEGY CRYSTAL ENGINE (HOTFIX) **/
 
 // --- AUDIO SYSTEM ---
 const AudioSys = {
